2001-08-04  Martin Baulig  <baulig@suse.de>

	* gnome-moz-remote.c, gnome-moz-remote2.c: Removed.
	* vroot.h: Removed.

	* gnome-remote.[ch]: Removed.

2001-08-04  Martin Baulig  <baulig@suse.de>

	* gnome-program.[ch]: Updated copyright info and use
	"This file is part of GNOME 2.0" to indicate that it's part
	of the frozed API.

	* libgnome-init.[ch]:  Updated copyright info and use
	"This file is part of GNOME 2.0" to indicate that it's part
	of the frozed API.

2001-08-04  Martin Baulig  <baulig@suse.de>

	* gnome-sound.h (gnome_sound_sample_new_from_cache): New func.
	(gnome_sound_cache_add_sample): New func.
	(gnome_sound_cache_remove_sample): New func.

	* gnome-triggers.c: Re-enable this file.

2001-08-03  Martin Baulig  <baulig@suse.de>

	* libgnome-init.c (libbonobo_post_args_parse): Initialize the
	config databases in an idle handler as this will improve the
	startup time of the application.

2001-08-03  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Create gnomesoundplugin_csl.la and install it
	in $(libdir)/gnome-2.0/sound-plugins/ if we have CSL.

	* gnome-sound.[ch]: The new GNOME Sound API.

	* gnome-sound-csl.c: This is the sound plugin module for CSL.

	* test-sound.c: New file.

2001-08-01  Martin Baulig  <baulig@suse.de>

	* gnome-paper.[ch]: Removed.

2001-07-31  Martin Baulig  <baulig@suse.de>

	* gnome-marshal.list: Removed everything which is not currently used:
	VOID:DOUBLE, VOID:UINT, VOID:STRING,INT, VOID:STRING,INT,BOXED,
	VOID:STRING,INT,UINT, VOID:POINTER,INT,BOOLEAN, VOID:STRING,BOXED,
	VOID:STRING,BOOLEAN,BOXED, ENUM:VOID, BOOLEAN:OBJECT, POINTER:INT,INT,
	POINTER:BOOLEAN, POINTER:VOID, POINTER:POINTER, STRING:VOID.

2001-07-31  Martin Baulig  <baulig@suse.de>

	* gnome-ditem.[ch]: Removed. This will be moved to gnome-core when George is
	back from his holidays.

2001-07-27  Martin Baulig  <baulig@suse.de>

	* libgnome-marshal.list: VOID:STRING,INT,UINT,BOXED -> VOID:STRING,INT,UINT.