@@ -91,8 +91,7 @@ libgnomeinclude_HEADERS = \
 	$(libgnome_headers)
 
 noinst_HEADERS = \
-	gnome-triggersP.h	\
-	libgnomeP.h
+	gnome-triggersP.h
 
 if HAVE_CSL
 cslmodules = gnomesoundplugin_csl.la
