@@ -35,9 +35,8 @@
 #include <string.h>
 #include <gmodule.h>
 #include <libgnome/gnome-program.h>
+#include <libgnome/libgnome-init.h>
 #include <libgnome/gnome-i18n.h>
-
-#include "libgnomeP.h"
 
 #include <gobject/gboxed.h>
 #include <gobject/gvaluearray.h>
