@@ -1,5 +1,9 @@
 2001-08-04  Martin Baulig  <baulig@suse.de>
 
+	* libgnomeP.h: Removed.
+
+2001-08-04  Martin Baulig  <baulig@suse.de>
+
 	* gnome-moz-remote.c, gnome-moz-remote2.c: Removed.
 	* vroot.h: Removed.
 
